max min validated by rules